--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,24 @@
 version: "3.7"
 services:
+  cron-connector:
+    image: "ghcr.io/openfaas/cron-connector:latest"
+    environment:
+      - gateway_url=http://gateway:8080
+      - basic_auth=true
+      - secret_mount_path=/run/secrets
+    volumes:
+      # we assume cwd == /var/lib/faasd
+      - type: bind
+        source: ./secrets/basic-auth-password
+        target: /run/secrets/basic-auth-password
+      - type: bind
+        source: ./secrets/basic-auth-user
+        target: /run/secrets/basic-auth-user
+    cap_add:
+      - CAP_NET_RAW
+    depends_on:
+      - gateway
+      
   basic-auth-plugin:
     image: ghcr.io/openfaas/basic-auth:0.21.4
     environment:
